@@ -1,3 +1,8 @@
+2005-06-30	Marcelo Mottalli	<marcelo@gforgegroup.com>
+
+	* Added FRS interface to the SOAP server
+	* Fixed a couple of things in the Task manager interface in the SOAP server
+
 2005-06-28	Tim Perdue	<tim@gforge.org>
 
 	* Added a customizable template file for Group->approve() function
